[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/other/white-32x32.png" type="Texture" id=1]
[ext_resource path="res://hud/health_bar/health_bar.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/health_bar/health.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/health_bar/water_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/health_bar/restaurant_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/supermarket.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://hud/health_bar/gm_mode.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="DynamicFont" id=4]
size = 20
extra_spacing_top = 8
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.117647 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[node name="health_bar" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 40.0
margin_right = 225.0
margin_bottom = 104.0
custom_constants/separation = 22
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Control" parent="VBoxContainer"]
margin_right = 200.0

[node name="Panel" type="Panel" parent="VBoxContainer/health"]
margin_right = 200.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/health"]
margin_left = 27.0
margin_top = 3.0
margin_right = 197.0
margin_bottom = 17.0
value = 100.0
texture_progress = ExtResource( 1 )
tint_progress = Color( 0.0941176, 0.890196, 0.0941176, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/health"]
self_modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 13, 10 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="food" type="Control" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 200.0
margin_bottom = 22.0

[node name="Panel" type="Panel" parent="VBoxContainer/food"]
margin_right = 200.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/food"]
margin_left = 27.0
margin_top = 3.0
margin_right = 197.0
margin_bottom = 17.0
value = 70.0
texture_progress = ExtResource( 1 )
tint_progress = Color( 0.933333, 0.713726, 0.129412, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/food"]
self_modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 13, 10 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="water" type="Control" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 44.0

[node name="Panel" type="Panel" parent="VBoxContainer/water"]
margin_right = 200.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/water"]
margin_left = 27.0
margin_top = 3.0
margin_right = 197.0
margin_bottom = 17.0
value = 50.0
texture_progress = ExtResource( 1 )
tint_progress = Color( 0.329412, 0.494118, 0.882353, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/water"]
self_modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 13, 10 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="survival_detail" type="Control" parent="."]
margin_left = 24.0
margin_top = 112.0
margin_right = 160.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="day" type="RichTextLabel" parent="survival_detail"]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_top = -8.0
margin_right = 200.0
margin_bottom = 80.0
custom_fonts/normal_font = SubResource( 4 )
text = "Day = xxx"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gm_mode" type="Panel" parent="."]
visible = false
margin_left = 24.0
margin_top = 328.0
margin_right = 224.0
margin_bottom = 536.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="morning" type="Button" parent="gm_mode"]
margin_left = 8.0
margin_top = 16.0
margin_right = 88.0
margin_bottom = 48.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
text = "เช้า"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evening" type="Button" parent="gm_mode"]
margin_left = 112.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 48.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
text = "ค่ำ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="noon" type="Button" parent="gm_mode"]
margin_left = 8.0
margin_top = 64.0
margin_right = 88.0
margin_bottom = 96.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
text = "เที่ยงวัน"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="gm_mode/morning" to="gm_mode" method="_on_morning_pressed"]
[connection signal="pressed" from="gm_mode/evening" to="gm_mode" method="_on_evening_pressed"]
[connection signal="pressed" from="gm_mode/noon" to="gm_mode" method="_on_noon_pressed"]
